--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 - Personal javascript repo.
 - For practice
-- Nothing special
+- Appreciated if you leave comments here.
 
 Thanks for your visit.
 Have a great day!
